# guardian-db

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: odm-ci.yml  rust.yml
benches/: odm_benchmark.rs
docs/: NAMESPACE_ROTATION.md  ODM_BENCHMARKS.md  READ_ONLY_REPLICATION.md  TUI_IMPLEMENTATION_PLAN.md  odm.md  postgres-compat.md
examples/: connection_pool_demo.rs  event_bus_usage_demo.rs  p2p_chat_demo.rs  p2p_chat_tui.rs  postgres_iroh_gateway.rs
examples/postgres-typeorm/: README.md  package-lock.json  package.json  tsconfig.json
examples/postgres-typeorm/src/: crud.ts  data-source.ts  demo.ts  gateway.ts  queries.ts  schema.ts  seed.ts  types.ts
guardian-db-derive/: Cargo.toml
guardian-db-derive/src/: lib.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/benchmark/: odm-benchmark.ts
sdk/typescript/src/: collection.ts  errors.ts  guardian-db.ts  index.ts  memory-transport.ts  query.ts  schema.ts  transport.ts  types.ts  utils.ts
sdk/typescript/test/: odm.test.ts
src/: address.rs  data_store.rs  db_manifest.rs  events.rs  keystore.rs  lib.rs  message_marshaler.rs  reactive_synchronizer.rs  rotation.rs  traits.rs
src/access_control/: acl_guardian.rs  acl_iroh.rs  acl_simple.rs  manifest.rs  mod.rs  traits.rs
src/cache/: level_down.rs  mod.rs
src/guardian/: core.rs  error.rs  mod.rs  serializer.rs
src/log/: access_control.rs  entry.rs  identity.rs  identity_provider.rs  lamport_clock.rs  mod.rs  traits.rs
src/odm/: collection.rs  error.rs  index.rs  mod.rs  model.rs  query.rs  schema.rs  storage.rs  transaction.rs  update.rs
src/p2p/: mod.rs
src/p2p/messaging/: direct_channel.rs  (+2 more)
src/pgwire/: mod.rs
src/relational/: catalog.rs  error.rs  index.rs  mod.rs  storage.rs  types.rs  value.rs
src/sql/: catalog_views.rs  conv.rs  ddl.rs  dml.rs  engine.rs  error.rs  eval.rs  exec.rs  funcs.rs  guardian_storage.rs  lock.rs  mod.rs  names.rs  parser.rs  result.rs  row.rs  select.rs  store.rs  tests.rs
src/stores/: events.rs  mod.rs
src/tests/: connection_pool_test.rs  event_log_store_test.rs  gossip_test.rs  guardian_core_test.rs  guardian_wrapper_test.rs  identity_verification_test.rs  iroh_access_controller_test.rs  iroh_backend_test.rs  kv_store_test.rs  manifest_test.rs  networking_metrics_test.rs
tests/: integration_readonly.rs  integration_replication.rs  odm.rs  odm_benchmark_reliability.rs  pgwire_wire.rs  sql_conformance.rs  sql_locks.rs  sql_replication.rs
tests/common/: mod.rs
tests/postgres-compat/: README.md  harness.ts  node-postgres.test.ts  package-lock.json  package.json  tsconfig.json  typeorm.test.ts
(+30 files in other folders)
