[package]
name = "guardian-db"
version = "0.17.0"
authors = ["William Maslonek <wmaslonek@icloud.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.95.0"
description = "High-performance, local-first decentralized database built on Rust and Iroh"
repository = "https://github.com/wmaslonek/guardian-db/"
readme = "README.md"
homepage = "https://www.willsearch.com.br/"
documentation = "https://docs.rs/guardian-db"
keywords = ["database", "p2p", "iroh", "decentralized", "crdt"]
categories = ["database-implementations", "network-programming", "web-programming"]

[features]
default = []
odm = ["dep:guardian-db-derive", "uuid/v4"]

[dependencies]
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.3"
futures = "0.3.31"
opentelemetry = "0.32.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.10"
hex = "0.4.3"
iroh = "1.0.0"
iroh-io = "0.6.1"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
iroh-docs = "0.101.0"
iroh-mdns-address-lookup = "0.4.0"
bytes = "1.11.1"
ed25519-dalek = { version = "2.2", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
blake3 = "1.8.2"
lru = "0.18.0"
zstd = "0.13.3"
futures-lite = "2.6.1"
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.0"
redb = "4.1.0"
guardian-db-derive = { version = "0.16.0", path = "guardian-db-derive", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.8.0"
dialoguer = "0.12.0"
console = "0.16.2"
chrono = "0.4"
crossterm = "0.29.0"
base64 = "0.22.1"

[[bin]]
name = "guardian-admin"
path = "src/bin/guardian_administration_panel.rs"

[[bench]]
name = "iroh_gossipsub_performance"
harness = false

[[bench]]
name = "odm_benchmark"
harness = false
required-features = ["odm"]

[workspace]
members = ["guardian-db-derive"]
resolver = "2"
