[package]
name = "guardian-db-derive"
version = "0.16.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
description = "Derive macros for guardian-db ODM models"
repository = "https://github.com/wmaslonek/guardian-db/"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
